<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/sell_icon"
            android:title="@string/menu_sell" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/bid_icon"
            android:title="@string/menu_bid" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/rent_icon"
            android:title="@string/menu_rent" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/rate_icon"
                android:title="@string/menu_rate" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/help_icon"
                android:title="@string/menu_help" />
        </menu>
    </item>

</menu>
