<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.teza_bid.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.teza_bid.ui.sell.SellFragment"
        android:label="@string/menu_sell"
        tools:layout="@layout/fragment_sell" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.teza_bid.ui.bid.BidFragment"
        android:label="@string/menu_bid"
        tools:layout="@layout/fragment_bid" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.teza_bid.ui.rent.RentFragment"
        android:label="@string/menu_rent"
        tools:layout="@layout/fragment_help" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.teza_bid.ui.rate.RateFragment"
        android:label="@string/menu_rate"
        tools:layout="@layout/fragment_rate" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.teza_bid.ui.help.HelpFragment"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_rent" />
</navigation>